# lvgl

./: BUILD.gn  lvgl.gni
drivers/tft/: lv_st7789.c  lv_st7789.h  st7789.c  st7789.h
drivers/touch/: ft6236.c  ft6236.h  lv_ft6236.c  lv_ft6236.h
src/core/: lv_indev.c
src/extra/libs/qrcode/: qrcodegen.c
src/extra/widgets/msgbox/: lv_msgbox.c
src/misc/: lv_mem.c  lv_timer.c
