import("//build_overrides/lvgl.gni")

template("lvgl_target") {
  lvgl_target_name = target_name

  config("${lvgl_target_name}_config") {
    include_dirs = [
        "${lvgl_root}/drivers/tft",             
        "${lvgl_root}/drivers/touch",               
        "${lvgl_root}/src",                         
        "${lvgl_root}/src/core",                    
        "${lvgl_root}/src/draw",                    
        "${lvgl_root}/src/draw/sw",                 
        "${lvgl_root}/src/extra",                   
        "${lvgl_root}/src/extra/layouts",           
        "${lvgl_root}/src/extra/layouts/flex",      
        "${lvgl_root}/src/extra/layouts/grid",      
        "${lvgl_root}/src/extra/libs",              
        "${lvgl_root}/src/extra/libs/bmp",          
        "${lvgl_root}/src/extra/libs/ffmpeg",       
        "${lvgl_root}/src/extra/libs/freetype",     
        "${lvgl_root}/src/extra/libs/fsdrv",        
        "${lvgl_root}/src/extra/libs/gif",          
        "${lvgl_root}/src/extra/libs/png",          
        "${lvgl_root}/src/extra/libs/rlottie",      
        "${lvgl_root}/src/extra/libs/sjpg",         
        "${lvgl_root}/src/extra/libs/qrcode",
        "${lvgl_root}/src/extra/others",            
        "${lvgl_root}/src/extra/others/monkey",     
        "${lvgl_root}/src/extra/others/snapshot",   
        "${lvgl_root}/src/extra/themes",            
        "${lvgl_root}/src/extra/themes/basic",      
        "${lvgl_root}/src/extra/themes/default",    
        "${lvgl_root}/src/extra/themes/mono",       
        "${lvgl_root}/src/extra/widgets",           
        "${lvgl_root}/src/extra/widgets/animimg",   
        "${lvgl_root}/src/extra/widgets/calendar",  
        "${lvgl_root}/src/extra/widgets/chart",     
        "${lvgl_root}/src/extra/widgets/colorwheel",
        "${lvgl_root}/src/extra/widgets/imgbtn",    
        "${lvgl_root}/src/extra/widgets/keyboard",  
        "${lvgl_root}/src/extra/widgets/led",       
        "${lvgl_root}/src/extra/widgets/list",      
        "${lvgl_root}/src/extra/widgets/menu",      
        "${lvgl_root}/src/extra/widgets/meter",     
        "${lvgl_root}/src/extra/widgets/msgbox",    
        "${lvgl_root}/src/extra/widgets/span",      
        "${lvgl_root}/src/extra/widgets/spinbox",   
        "${lvgl_root}/src/extra/widgets/spinner",   
        "${lvgl_root}/src/extra/widgets/tabview",   
        "${lvgl_root}/src/extra/widgets/tileview",  
        "${lvgl_root}/src/extra/widgets/win",       
        "${lvgl_root}/src/font",                    
        "${lvgl_root}/src/hal",                     
        "${lvgl_root}/src/misc",                    
        "${lvgl_root}/src/widgets",
    ]
  }

  source_set(lvgl_target_name) {
    forward_variables_from(invoker, "*")

    if (!defined(sources)) {
      sources = []
    }

    sources += [
        "${lvgl_root}/drivers/tft/lv_st7789.c",
    "${lvgl_root}/drivers/touch/lv_ft6236.c",
    "${lvgl_root}/src/core/lv_disp.c",
    "${lvgl_root}/src/core/lv_group.c",
    "${lvgl_root}/src/core/lv_indev.c",
    "${lvgl_root}/src/core/lv_indev_scroll.c",
    "${lvgl_root}/src/core/lv_obj.c",
    "${lvgl_root}/src/core/lv_obj_class.c",
    "${lvgl_root}/src/core/lv_obj_draw.c",
    "${lvgl_root}/src/core/lv_obj_pos.c",
    "${lvgl_root}/src/core/lv_obj_scroll.c",
    "${lvgl_root}/src/core/lv_obj_style.c",
    "${lvgl_root}/src/core/lv_obj_style_gen.c",
    "${lvgl_root}/src/core/lv_obj_tree.c",
    "${lvgl_root}/src/core/lv_event.c",
    "${lvgl_root}/src/core/lv_refr.c",
    "${lvgl_root}/src/core/lv_theme.c",
    "${lvgl_root}/src/draw/lv_draw_arc.c",
    "${lvgl_root}/src/draw/lv_draw.c",
    "${lvgl_root}/src/draw/lv_draw_img.c",
    "${lvgl_root}/src/draw/lv_draw_label.c",
    "${lvgl_root}/src/draw/lv_draw_line.c",
    "${lvgl_root}/src/draw/lv_draw_mask.c",
    "${lvgl_root}/src/draw/lv_draw_rect.c",
    "${lvgl_root}/src/draw/lv_draw_triangle.c",
    "${lvgl_root}/src/draw/lv_img_buf.c",
    "${lvgl_root}/src/draw/lv_img_cache.c",
    "${lvgl_root}/src/draw/lv_img_decoder.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_arc.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_blend.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_img.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_letter.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_line.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_rect.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_polygon.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_gradient.c",
    "${lvgl_root}/src/draw/sw/lv_draw_sw_dither.c",
    "${lvgl_root}/src/extra/lv_extra.c",
    "${lvgl_root}/src/extra/themes/default/lv_theme_default.c",
    "${lvgl_root}/src/extra/widgets/animimg/lv_animimg.c",
    "${lvgl_root}/src/extra/libs/qrcode/lv_qrcode.c",
    "${lvgl_root}/src/extra/libs/qrcode/qrcodegen.c",
    "${lvgl_root}/src/font/lv_font.c",
    "${lvgl_root}/src/font/lv_font_montserrat_8.c",
    "${lvgl_root}/src/font/lv_font_montserrat_10.c",
    "${lvgl_root}/src/font/lv_font_montserrat_12.c",
    "${lvgl_root}/src/font/lv_font_montserrat_16.c",
    "${lvgl_root}/src/font/lv_font_montserrat_20.c",
    "${lvgl_root}/src/font/lv_font_montserrat_26.c",
    "${lvgl_root}/src/font/lv_font_montserrat_30.c",
    "${lvgl_root}/src/font/lv_font_fmt_txt.c",
    "${lvgl_root}/src/font/lv_font_loader.c",
    "${lvgl_root}/src/hal/lv_hal_disp.c",
    "${lvgl_root}/src/hal/lv_hal_indev.c",
    "${lvgl_root}/src/hal/lv_hal_tick.c",
    "${lvgl_root}/src/misc/lv_anim.c",
    "${lvgl_root}/src/misc/lv_area.c",
    "${lvgl_root}/src/misc/lv_fs.c",
    "${lvgl_root}/src/misc/lv_ll.c",
    "${lvgl_root}/src/misc/lv_lru.c",
    "${lvgl_root}/src/misc/lv_mem.c",
    "${lvgl_root}/src/misc/lv_style.c",
    "${lvgl_root}/src/misc/lv_templ.c",
    "${lvgl_root}/src/misc/lv_tlsf.c",
    "${lvgl_root}/src/misc/lv_txt.c",
    "${lvgl_root}/src/misc/lv_anim_timeline.c",
    "${lvgl_root}/src/misc/lv_async.c",
    "${lvgl_root}/src/misc/lv_color.c",
    "${lvgl_root}/src/misc/lv_gc.c",
    "${lvgl_root}/src/misc/lv_log.c",
    "${lvgl_root}/src/misc/lv_math.c",
    "${lvgl_root}/src/misc/lv_printf.c",
    "${lvgl_root}/src/misc/lv_style_gen.c",
    "${lvgl_root}/src/misc/lv_timer.c",
    "${lvgl_root}/src/misc/lv_txt_ap.c",
    "${lvgl_root}/src/misc/lv_utils.c",
    "${lvgl_root}/src/widgets/lv_arc.c",
    "${lvgl_root}/src/widgets/lv_bar.c",
    "${lvgl_root}/src/widgets/lv_btn.c",
    "${lvgl_root}/src/widgets/lv_canvas.c",
    "${lvgl_root}/src/widgets/lv_img.c",
    "${lvgl_root}/src/widgets/lv_label.c",
    "${lvgl_root}/src/widgets/lv_line.c",
    "${lvgl_root}/src/widgets/lv_roller.c",
    "${lvgl_root}/src/widgets/lv_slider.c",
    "${lvgl_root}/src/widgets/lv_switch.c",
    "${lvgl_root}/src/widgets/lv_table.c",
    "${lvgl_root}/src/widgets/lv_textarea.c",
    "${lvgl_root}/src/widgets/lv_btnmatrix.c",
    "${lvgl_root}/src/extra/layouts/flex/lv_flex.c",
    "${lvgl_root}/src/extra/widgets/msgbox/lv_msgbox.c", 
    ]

    if (!defined(configs)) {
      configs = []
    }

    if (!defined(public_configs)) {
      public_configs = []
    }

    public_configs += [ ":${lvgl_target_name}_config" ]
  }
}